<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="x">X</string>
    <string name="o">O</string>
    <string name="system">SYSTEM</string>
    <string name="you">YOU</string>
    <string name="congrats">Congrats!!</string>
    <string name="new_game">New Game</string>
    <string name="exit">Exit</string>
    <string name="player_2">PLAYER 2</string>
    <string name="player_1">PLAYER 1</string>
    <string name="button1">button1</string>
    <string name="button2">button2</string>
    <string name="button3">button3</string>
    <string name="button4">button4</string>
    <string name="button5">button5</string>
    <string name="button6">button6</string>
    <string name="button7">button7</string>
    <string name="button8">button8</string>
    <string name="button9">button9</string>
</resources>